--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let room of rooms">
-    <a [routerLink]="['/room', room]"> {{room}} </a>
+    <a [routerLink]="['/rooms', room]"> {{room}} </a>
   </li>
 </ul>
 
