--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -7,3 +7,9 @@
 <h3>Enter a name for new room</h3>
 <input type="text" [(ngModel)]="newRoomName" />
 <button (click)="createRoom()" >Create new room</button>
+
+<ul>
+  <li *ngFor="let user of users">
+    <a [routerLink]="['/users', user]"> {{user}} </a>
+  </li>
+</ul>
