--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -1,9 +1,26 @@
-<ul>
-  <li *ngFor="let room of rooms">
-    <a [routerLink]="['/rooms', room]"> {{room}} </a>
-  </li>
-</ul>
-
-<h3>Enter a name for new room</h3>
-<input type="text" [(ngModel)]="newRoomName" />
-<button (click)="createRoom()" >Create new room</button>
+<div class="container-fluid">
+  <div class="row">
+    <h1>OnlineChat</h1>
+  </div>
+  <div class="col-lg-4">
+    <h2>Rooms</h2>
+    <ul class="list-group">
+      <a class ="list-group-item" *ngFor="let room of rooms" [routerLink]="['/rooms', room]"> {{room}} </a>
+    </ul>
+  </div>
+  <div class="col-lg-4">
+    <h2>Create a room</h2>
+    <div class="input-group input-group-lg">
+      <input type="text" class="form-control center" placeholder="Title" [(ngModel)]="newRoomName" />
+      <span class="input-group-btn">
+        <button (click)="createRoom()" class="btn btn-secondary" type="button">Create</button>
+      </span>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <h2>Online Users</h2>
+    <ul class="list-group">
+      <a class ="list-group-item" *ngFor="let room of rooms" [routerLink]="['/rooms', room]"> {{room}} </a>
+    </ul>
+  </div>
+</div>
