Many things done

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <h1 class="text-center">
-      OnlineChat
+      Welcome
     </h1>
     <div id="inputBoxDiv" class="row input-group input-group-lg">
       <input type="text" class="form-control center" placeholder="Username" aria-describedby="sizing-addon1" [(ngModel)]="userName" />
