--- a/client/src/app/room/room.component.css
+++ b/client/src/app/room/room.component.css
@@ -1,7 +1,3 @@
-h2 {
-	color: white;
-}
-
 #leaveRoomButton {
 	float: right;
 	margin-top: 20px;
@@ -9,4 +5,14 @@ h2 {
 
 #usersListGroup {
 	width: 100%;
+}
+
+#chatPanel {
+	max-height: 400px;
+	overflow-y: scroll;
+}
+
+#miniHeader {
+	margin-top: 0;
+	margin-bottom: 10px;
 }
