--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,5 +2,5 @@
 
 body {
 	background-color: lightskyblue;
-	/*background-image: url("assets/blue_background.jpg");*/
+	background-image: url("assets/background.jpg");
 }
