--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -17,7 +17,10 @@
         </div>
         <div class="panel-body" id="chatPanel">
           <ul class="list-group">
-            <div class="list-group-item" *ngFor="let msg of messages"> {{msg.nick}} --- {{msg.message}}</div>
+            <div class="list-group-item" *ngFor="let msg of messages">
+              <p id="nick"> {{msg.nick}} </p>
+              <p> {{msg.message}}</p>
+            </div>
           </ul>
         </div>
         <div class="input-group">
