Linked leave user button

--- a/client/src/app/user/user.component.html
+++ b/client/src/app/user/user.component.html
@@ -3,7 +3,7 @@
     <h1> {{user}} </h1>
   </div>
   <div class="col-lg-2">
-    <button type="button" id="leaveRoomButton" class="btn btn-danger center" (click)="leaveRoom()">Leave {{user}}</button>
+    <button type="button" id="leaveRoomButton" class="btn btn-danger center" (click)="leaveUser()">Leave {{user}}</button>
   </div>
 </div>
 
